syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "FlightFinder.Shared";

service FlightData {
    rpc Airports (google.protobuf.Empty) returns (AirportsReply);
    rpc Search (SearchCriteria) returns (SearchReply);
}

message AirportsReply {
    repeated Airport airports = 1;
}

message Airport {
    string code = 1;
    string displayName = 2;
}

enum TicketClass {
    Economy = 0;
    PremiumEconomy = 1;
    Business = 2;
    First = 3;
}

message SearchCriteria {
    string fromAirport = 1;
    string toAirport = 2;
    google.protobuf.Timestamp outboundDateTimestamp = 3;
    google.protobuf.Timestamp returnDateTimestamp = 4;
    TicketClass ticketClass = 5;
}

message SearchReply {
    repeated Itinerary itineraries = 1;
}

message GrpcDecimal {
    int64 units = 1;
    sfixed32 nanos = 2;
}

message Itinerary {
    FlightSegment outbound = 1;
    FlightSegment return = 2;
    GrpcDecimal grpcPrice = 3;
}

message FlightSegment {
    string airline = 1;
    string fromAirportCode = 2;
    string toAirportCode = 3;
    google.protobuf.Timestamp departureTimestamp = 4;
    google.protobuf.Timestamp returnTimestamp = 5;
    double durationHours = 6;
    TicketClass ticketClass = 7;
}
